--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,37 +1,37 @@
+# ワークフローの名前
+name: Build and Deploy
+
+# ワークフローのトリガー
+on:
+  # mainブランチへのpush時に実行
+  push:
+    branches:
+      - main
+  
+  # mainブランチへのプルリクエスト時に実行
+  pull_request:
+    branches:
+      - main
+
+  # 手動で実行できるようにする
+  workflow_dispatch:
+
+# 実行されるジョブ
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-      
-      - name: Build
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
         run: npm run build
-
-      # 👇 if条件を追加
-      - name: Upload artifact
-        if: matrix.node-version == '20.x' # 特定のバージョン（例: 20.x）のジョブでのみ実行
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './build'
-
-  deploy:
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
